fix bubble wrap colors to gray?

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -113,14 +113,14 @@ button.start-timer-button:hover{
 button.bubble{
   height: 125px;
   width: 125px;
-  background-color: #d5d8d8;
+  background-color: #d8d8d8;
   border-radius: 50%;
   margin: 10px;
-  box-shadow: inset 0 0 10px #8c8f8f,  3px 3px 3px 3px #8c8f8f;
+  box-shadow: inset 0 0 10px #929292,  3px 3px 3px 3px #8f8f8f;
 }
 
 button.bubble.popped{
-  box-shadow: inset 0 0 10px #bdc0c0;
+  box-shadow: inset 0 0 10px #bdbdbd; 
 }
 
 
